syntax = "proto3";
package private.test.legacyplugin;
option go_package = "github.com/spiffe/spire/proto/private/test/legacyplugin";

import "spire/common/plugin/plugin.proto";

message EchoRequest {
    string in = 1;
}

message EchoResponse {
    string out = 1;
}

service SomePlugin {
    rpc PluginEcho(EchoRequest) returns (EchoResponse);
    rpc Configure(spire.common.plugin.ConfigureRequest) returns (spire.common.plugin.ConfigureResponse);
}
